<resources>
    <string name="app_name">Comida Saborosa</string>
    <string name="comida_saborosa">Comida Saborosa</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="esqueceu_a_password">Esqueceu a Password?</string>
    <string name="btn_login">Login</string>
    <string name="email_">Email</string>
    <string name="password_">Password</string>
    <string name="sem_conta">Não tem uma conta?</string>
    <string name="fazer_o_registo">Fazer o registo</string>
    <string name="registo">Registo</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="btn_registo">Registo</string>
    <string name="tem_conta">Já tem uma conta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_politecnico">Instituto Politécnico de Tomar</string>
    <string name="nome_curso">Engenharia Informática</string>
    <string name="nome_disciplina">Desenvolvimento de Aplicações Móveis</string>
    <string name="ano_letivo">2024/2025</string>
    <string name="nome_numero">Bárbara Barbosa nº19493</string>
    <string name="perfil">Perfil</string>
    <string name="menu">Menu</string>
    <string name="carro">Carro</string>
    <string name="localizacao">Localizacao</string>
    <string name="carrinho_vazio">Carrinho vazio</string>
    <string name="total_0_00">Total: €0,00</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="menu1">Menu</string>
    <string name="quantidade_1">Quantidade: 1</string>
    <string name="sinal_menos">-</string>
    <string name="_1">1</string>
    <string name="sinal_mais">+</string>
    <string name="remover">Remover</string>
    <string name="adicionar">Adicionar</string>
</resources>